--- a/envs/Testim Dev/static-resources/salesforce/Records/ApexClass/ComplianceMonitor.cls
+++ b/envs/Testim Dev/static-resources/salesforce/Records/ApexClass/ComplianceMonitor.cls
@@ -1,7 +1,7 @@
 public class ComplianceMonitor {
     
     /*
-     * Checks if the "Is GDPR Safe" field is true
+     * Checks if the "Is Audit Ready" field is true
 	*/
     public static Boolean isGDPRSafe(Account a){
         return a.Is_GDPR_Safe__c;
